RESOLVED FIXED231940
FunctionDispatcher should not be RefCounted
https://bugs.webkit.org/show_bug.cgi?id=231940
Summary FunctionDispatcher should not be RefCounted
Kimmo Kinnunen
Reported 2021-10-19 00:10:09 PDT
FunctionDispatcher should not be RefCounted. There's nothing inherently refcounted about being recipient of task submissions. FunctionDispatcher being RefCounted lead to fix bug 231897 using this as the solution, where the original bug was bug 231897
Attachments
Patch (4.82 KB, patch)
2022-04-06 04:30 PDT, Kimmo Kinnunen
no flags
Patch (5.51 KB, patch)
2022-04-06 12:00 PDT, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (5.40 KB, patch)
2022-04-06 12:33 PDT, Kimmo Kinnunen
no flags
Patch (5.42 KB, patch)
2022-04-06 12:40 PDT, Kimmo Kinnunen
no flags
Patch (5.42 KB, patch)
2022-04-06 22:40 PDT, Kimmo Kinnunen
no flags
[fast-cq] For landing (5.44 KB, patch)
2022-04-12 02:41 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-10-19 00:12:08 PDT
.. where the original bug was 231939
Radar WebKit Bug Importer
Comment 2 2021-10-26 00:11:18 PDT
Kimmo Kinnunen
Comment 3 2022-04-06 04:30:20 PDT
Kimmo Kinnunen
Comment 4 2022-04-06 12:00:21 PDT
Kimmo Kinnunen
Comment 5 2022-04-06 12:33:58 PDT
Chris Dumez
Comment 6 2022-04-06 12:37:07 PDT
Comment on attachment 456847 [details] Patch r=me
Kimmo Kinnunen
Comment 7 2022-04-06 12:40:08 PDT
Kimmo Kinnunen
Comment 8 2022-04-06 12:50:14 PDT
Comment on attachment 456851 [details] Patch Thanks! (removing r?, will upload for landing tomorrow)
Kimmo Kinnunen
Comment 9 2022-04-06 22:40:00 PDT
EWS
Comment 10 2022-04-11 05:58:06 PDT
ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!.
Kimmo Kinnunen
Comment 11 2022-04-12 02:41:45 PDT
Created attachment 457320 [details] [fast-cq] For landing
EWS
Comment 12 2022-04-12 02:45:05 PDT
Committed r292768 (249552@main): <https://commits.webkit.org/249552@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457320 [details].
Note You need to log in before you can comment on or make changes to this bug.