FunctionDispatcher should not be RefCounted https://bugs.webkit.org/show_bug.cgi?id=231940

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-04-12
Reviewed by Chris Dumez.

Source/WebKit:

Remove ThreadSafeRefCounted from FunctionDispatcher. Make all existing
function dispatchers refcounted.

No new tests, refactor.

* NetworkProcess/cache/NetworkCacheData.h:
* Platform/IPC/StreamConnectionWorkQueue.h:

Source/WTF:

Remove ThreadSafeRefCounted from FunctionDispatcher. There is nothing inherently
refcountable about FunctionDispatcher. It is better to put the refcount to the
abstraction that needs it.

This makes it possible to build FunctionDispatchers that are not refcounted. This
lets the reader infer more about the API when such a dispatcher is passed to a
function. The reader understands that the passed dispatcher would not be kept alive.

* wtf/FunctionDispatcher.h:
* wtf/RunLoop.h:
Export ~RunLoop. For some reason this is a requirement on G++, MSVC based compilers (?).
This has most likely something to do with the multiple inheritance moving to RunLoop
from FunctionDispatcher. ~FunctionDispacher was exported before, and still is.
* wtf/WorkQueue.h:

Canonical link: https://commits.webkit.org/249552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292768 268f45cc-cd09-0410-ab3c-d52691b4dbfc